# spacetime-playground

./: .gitignore  CLAUDE.md  Cargo.toml  METAL_PERF.md  PLAN.md  README.md  ROADMAP.md  WASM_PLAN.md
docs/: MACOS_FREEZE_ANALYSIS.md
shaders/: fullscreen.wgsl  ray_march.wgsl
src/: app.rs  main.rs  screenshot.rs  simulation.rs  ui.rs
src/metrics/: schwarzschild.rs
src/renderer/: camera.rs  mod.rs  pipeline.rs  uniforms.rs
