[package]
name = "spacetime-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24"
winit = "0.30"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
image = "0.25"
half = "2"
